2000-08-30  Geoffrey Keating  <geoffk@cygnus.com>

	* libc/string/swab.c: Specify that it's defined in <unistd.h>.
	* libc/include/string.h: Don't include <sys/types.h>,
	as it causes really bad namespace pollution.  Don't declare
	swab(), it is properly declared in unistd.h.

2000-08-29  Werner Almesberger  <Werner.Almesberger@epfl.ch>

        * libc/unix/getpwent.c (getpwnam, getpwuid, getpwent): removed
        (broken) support for non-existent /etc/passwd field "comment".

2000-08-27  Werner Almesberger  <Werner.Almesberger@epfl.ch>

        * libc/posix/scandir.c (DIRSIZ, scandir): use struct dirent.d_namlen
        only if _DIRENT_HAVE_D_NAMLEN is defined.
        (alphasort): aligned prototype with
        libc/sys/cygwin/sys/dirent.h and simplified function body.
        * libc/posix/telldir.c (telldir): changed "telldir" prototype to
        long telldir (DIR *) as mentioned in annex B of POSIX.1

2000-08-27  Werner Almesberger  <Werner.Almesberger@epfl.ch>

        * libc/machine/i386/i386mach.h: added SOTYPE_FUNCTION to set type
        of global entry points if _I386MACH_NEED_SOTYPE_FUNCTION is defined;
        Added __CLI and __STI macros (controlled via
        _I386MACH_ALLOW_HW_INTERRUPTS macro).
        * libc/machine/i386/f_atan2.S libc/machine/i386/f_atan2f.S
        libc/machine/i386/f_frexp.S libc/machine/i386/f_frexpf.S
        libc/machine/i386/f_ldexp.S libc/machine/i386/f_ldexpf.S
        libc/machine/i386/f_log.S libc/machine/i386/f_log10.S
        libc/machine/i386/f_log10f.S libc/machine/i386/f_logf.S
        libc/machine/i386/f_tan.S libc/machine/i386/f_tanf.S
        libc/machine/i386/memchr.S libc/machine/i386/memcmp.S
        libc/machine/i386/memcpy.S libc/machine/i386/memmove.S
        libc/machine/i386/memset.S libc/machine/i386/setjmp.S
        libc/machine/i386/strchr.S libc/machine/i386/strlen.S:
        (that's libc/machine/i386/*.S) added SOTYPE_FUNCTION(symbol)
        for all global entry points.