@@ -3,6 +3,10 @@
 /* This and the other exec*.c files in this directory require 
    the target to provide the _execve syscall.  */
 
+
+#include <unistd.h>
+
+
 int
 execve (const char *path, char * const argv[], char * const envp[])
 {
